--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- font awesome -->
   <link rel="stylesheet" href="css/all.css">
-  <title>Grandma's</title>
+  <title>Foodie's</title>
   <style>
   </style>
 </head>
@@ -64,7 +64,7 @@ https://www.iconfinder.com/korawan_m
     <div class="container-fluid">
       <div class="row max-height justify-content-center align-items-center">
         <div class="col-10 mx-auto banner text-center">
-          <h1 class="text-capitalize">welcome to <strong class="banner-title ">grandma's</strong></h1>
+          <h1 class="text-capitalize">welcome to <strong class="banner-title ">foodie's</strong></h1>
           <a href="#store" class="btn banner-link text-uppercase my-2">explore</a>
 
         </div>
@@ -109,7 +109,7 @@ https://www.iconfinder.com/korawan_m
           <!--end cart total -->
           <!-- cart buttons -->
           <div class="cart-buttons-container mt-3 d-flex justify-content-between">
-            <!-- <a href="#" id="clear-cart" class="btn btn-outline-secondary btn-black text-uppercase">clear cart</a> -->
+            <a href="#" class="btn btn-outline-secondary btn-black text-uppercase btn-clear">clear cart</a>
             <a href="#" class="btn btn-outline-secondary text-uppercase btn-pink btn-purchase">purchase</a>
           </div>
           <!--end of  cart buttons -->
@@ -446,6 +446,17 @@ https://www.iconfinder.com/korawan_m
     </div>
   </div>
 
+  <!-- confirmation pop-up -->
+    <div id="confirmation" class="">
+      <p>Your item has been added to the cart.</p>
+    </div>
+    <!-- end of confirmation pop-up -->
+
+    <!-- purchase pop-up -->
+    <div id="confirmation-2" class="">
+      <p>Items purchased successfully!</p>
+    </div>
+    <!-- purchase pop-up -->
 
   <!-- jquery -->
   <script src="js/jquery-3.3.1.min.js"></script>
