--- a/index.html
+++ b/index.html
@@ -160,6 +160,41 @@ https://www.iconfinder.com/korawan_m
         </div>
       </div>
       <!-- end of section title -->
+
+      <!-- filter buttons -->
+        <div class="row">
+          <div
+            class="col-lg-8 mx-auto d-flex justify-content-around my-2 sortBtn flex-wrap"
+          >
+            <a
+              class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2"
+              data-filter="all"
+            >
+              all</a
+            >
+            <a
+              class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2"
+              data-filter="cakes"
+              >cakes</a
+            >
+            <a
+              class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2"
+              data-filter="cupcakes"
+              >cupcakes</a
+            >
+            <a
+              class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2"
+              data-filter="sweets"
+              >sweets</a
+            >
+            <a
+              class="btn btn-outline-secondary btn-black text-uppercase filter-btn m-2"
+              data-filter="doughnuts"
+              >doughnuts</a
+            >
+          </div>
+        </div>
+        <!-- end of filter buttons -->
       
       <!-- store  items-->
       <div class="row" class="store-items" id="store-items">
@@ -230,7 +265,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-1.jpeg" class="card-img-top store-img" alt="">
@@ -240,7 +275,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">dougnut item</h5>
+                <h5 id="store-item-name">doughnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">5</strong></h5>
 
               </div>
@@ -318,7 +353,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-2.jpeg" class="card-img-top store-img" alt="">
@@ -328,7 +363,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">dougnut item</h5>
+                <h5 id="store-item-name">doughnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">10</strong></h5>
 
               </div>
@@ -406,7 +441,7 @@ https://www.iconfinder.com/korawan_m
         </div>
         <!--end of single store item-->
         <!-- single item -->
-        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="dougnuts">
+        <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3 store-item doughnuts" data-item="doughnuts">
           <div class="card ">
             <div class="img-container">
               <img src="img/doughnut-3.jpeg" class="card-img-top store-img" alt="">
@@ -416,7 +451,7 @@ https://www.iconfinder.com/korawan_m
             </div>
             <div class="card-body">
               <div class="card-text d-flex justify-content-between text-capitalize">
-                <h5 id="store-item-name">dougnut item</h5>
+                <h5 id="store-item-name">doughnut item</h5>
                 <h5 class="store-item-value">$ <strong id="store-item-price" class="font-weight-bold">15</strong></h5>
 
               </div>
